# myco

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.pt-BR.md  myco  pyproject.toml
.claude/: settings.json
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  CONCEPT.md  LAUNCH-DRAFT.md  MULTI-CHANNEL.md  MULTI-TENANT.md  PROTOCOL.md  RECORD-DEMO-GIF.md  VISION.md
examples/heterogeneous-swarm/: README.md  run-claude-spec.sh  run-deepseek-impl.sh  scenario-01-spec-impl.md  tenant.env.example
examples/heterogeneous-swarm/duel/: CHALLENGE.md  README.md  REVIEW-RUBRIC.md  run-claude-duel.sh  run-deepseek-duel.sh  tests-shared.py
examples/heterogeneous-swarm/evaluations/: claude-perspective.md  deepseek-perspective.md
examples/heterogeneous-swarm/tetris/: README.md  REVIEW-RUBRIC.md  SPEC.md  tests-shared.test.mjs
examples/three-services/: README.md
examples/three-services/IAM/: CLAUDE.md
examples/three-services/SM/: CLAUDE.md
examples/three-services/SN/: CLAUDE.md
prototype/: EXPERIMENT.md  HOOK-VALIDATION.md  README.md  RESULTS.md  conftest.py  demo_multi_channel.sh  demo_multi_tenant.sh  myco  myco-hook.py  myco-log  myco_dispatch.py  myco_hook.py  myco_prompt_hook.py  myco_view.py  myco_worker.py  mycod.py  test.sh  test_critical.sh  test_multi_channel.py  test_multi_tenant.py  test_v1.py
swarm/: CLAUDE.md  director-CLAUDE.md  session-CLAUDE.md
swarm/view/: DIRECTOR.md  IAM.md  SM.md  SN.md
