[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primoia-myco"
version = "0.1.1"
description = "Coordinate parallel AI agent sessions across providers (Claude, DeepSeek, ...) — text-only protocol + Python daemon"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Primoia", email = "primoia.dev@gmail.com" },
]
maintainers = [
    { name = "Primoia", email = "primoia.dev@gmail.com" },
]
keywords = [
    "claude-code",
    "ai-agents",
    "multi-agent-systems",
    "agent-orchestration",
    "coordination-protocol",
    "swarm",
    "llm-tooling",
    "deepseek",
    "multi-provider",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
# stdlib only — no runtime dependencies
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0", "requests>=2.28"]

[project.urls]
Homepage = "https://github.com/primoia/myco"
Repository = "https://github.com/primoia/myco"
Issues = "https://github.com/primoia/myco/issues"
Changelog = "https://github.com/primoia/myco/blob/main/CHANGELOG.md"

[project.scripts]
mycod = "mycod:main"
myco-view = "myco_view:main"
myco-hook = "myco_hook:main"
myco-prompt-hook = "myco_prompt_hook:main"

[tool.setuptools]
package-dir = { "" = "prototype" }
py-modules = [
    "mycod",
    "myco_view",
    "myco_hook",
    "myco_prompt_hook",
    "myco_dispatch",
    "myco_worker",
]
